--- a/games/BOT A.N.I.C.html
+++ b/games/BOT A.N.I.C.html
@@ -61,8 +61,8 @@
         <a href="../index.html"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall"></a>
         <nav>
             <ul>
-                <li><a href="#games-section">Jeux</a></li>
-                <li><a href="#news-section">Actus</a></li>
+                <li><a href="../index.html#games-section">Jeux</a></li>
+                <li><a href="../index.html#news-section">Actus</a></li>
                 <li><a href="mailto:contact@lacorbeille.studio?subject=Demande%20de%20support">Support</a></li>
             </ul>
         </nav>
