--- a/games/Le LAB.html
+++ b/games/Le LAB.html
@@ -61,8 +61,8 @@
         <a href="../index.html"><img src="../assets/img/branding/LogoSmallWhite.svg" alt="LaCorbeille STUDIO - LogoSmall" id="logoSmall"></a>
         <nav>
             <ul>
-                <li><a href="#games-section">Jeux</a></li>
-                <li><a href="#news-section">Actus</a></li>
+                <li><a href="../index.html#games-section">Jeux</a></li>
+                <li><a href="../index.html#news-section">Actus</a></li>
                 <li><a href="mailto:contact@lacorbeille.studio?subject=Demande%20de%20support">Support</a></li>
             </ul>
         </nav>
@@ -79,23 +79,17 @@
             </div>
         </div>
         <div id="links">
-            <a href="../sitemap.xml" target="_blank">Sitemap</a>
+            <a href="../sitemap.xml">Sitemap</a>
             <a href="../legal.html">Legal notice</a>
-            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing"
-                target="_blank">Press kit</a>
+            <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" target="_blank">Press kit</a>
         </div>
         <div id="socials">
-            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg"
-                    alt="Itch.io"></a>
-            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg"
-                    alt="Discord"></a>
-            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img
-                    src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img
-                    src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://lacorbeille-studio.itch.io" target="_blank"><img src="../assets/img/social/ItchIO.svg" alt="Itch.io"></a>
+            <a href="https://discord.com/invite/hmPzS4k" target="_blank"><img src="../assets/img/social/Discord.svg" alt="Discord"></a>
+            <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank"><img src="../assets/img/social/Facebook.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/company/lacorbeille-studio" target="_blank"><img src="../assets/img/social/LinkedIn.svg" alt="LinkedIn"></a>
             <a href="https://x.com/LaCorbeilleSTD" target="_blank"><img src="../assets/img/social/X.svg" alt="X"></a>
-            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img
-                    src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
+            <a href="https://www.instagram.com/lacorbeille.studio" target="_blank"><img src="../assets/img/social/Instagram.svg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
