--- a/links.lacorbeille.studio/index.html
+++ b/links.lacorbeille.studio/index.html
@@ -19,6 +19,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "LaCorbeille STUDIO",
+        "url": "https://lacorbeille.studio",
+        "logo": "https://lacorbeille.studio/assets/img/branding/LogoFull.svg",
+        "description": "Créateur de jeux vidéo."
+    }
+    </script>
+    <!-- OpenGraph -->
+    <meta property="og:title" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
+    <meta property="og:description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
+    <meta property="og:image" content="https://lacorbeille.studio/assets/img/branding/LogoFull.svg" />
+    <meta property="og:url" content="https://lacorbeille.studio" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="LaCorbeille STUDIO - Créateur de Jeux Vidéo" />
+    <meta name="twitter:description" content="Découvrez nos jeux vidéo et les dernières actualités de notre studio." />
+    <meta name="twitter:image" content="https://lacorbeille.studio/assets/img/branding/LogoFull.svg" />
+    <meta name="twitter:site" content="@LaCorbeilleSTD" />
 </head>
 
 <body>
