--- a/index.html
+++ b/index.html
@@ -144,21 +144,7 @@
                     </div>
                 </div>
                 <div class="game-card">
-                    <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
-                    <div class="platforms">
-                        <img src="assets/img/platforms/Windows.svg" alt="Windows">
-                        <img src="assets/img/platforms/Linux.svg" alt="Linux">
-                    </div>
-                </div>
-                <div class="game-card">
-                    <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
-                    <div class="platforms">
-                        <img src="assets/img/platforms/Windows.svg" alt="Windows">
-                        <img src="assets/img/platforms/Linux.svg" alt="Linux">
-                    </div>
-                </div>
-                <div class="game-card">
-                    <img src="https://placehold.co/300x450?text=Game" alt="Placeholder">
+                    <img src="https://placehold.co/300x450?text=Camasia" alt="Placeholder">
                     <div class="platforms">
                         <img src="assets/img/platforms/Windows.svg" alt="Windows">
                         <img src="assets/img/platforms/Linux.svg" alt="Linux">
